@@ -72,6 +72,7 @@ Chronological list of authors
   - Abhinav Gupta
   - John Detlefs
   - Bart Bruininks
+  - Fiona Naughton
 
 External code
 -------------
